@@ -1,0 +1,5 @@
+[source,clojure]
+----
+(+ 1 2)
+;; => 3
+----
